--- a/Laba2/ASP_UI/Views/MedicalBills/Create.cshtml
+++ b/Laba2/ASP_UI/Views/MedicalBills/Create.cshtml
@@ -18,21 +18,13 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
+                <label asp-for="Type" class="control-label"></label>
+                <select asp-for="Type" asp-items="Model.TypeList"></select>
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                @*<input asp-for="MedicalBillsType.Type" class="form-control" />*@
-                @*<input list="types"/>*@
-                @*<datalist id="types" asp-for="Type" asp-items="ViewBag.Speciality">
-                    @foreach(var t in Model.Types)
-                     {
-                        <option value="@t.Id">Type</option>
-                     }
-                </datalist>*@
-                <select asp-for="Type" asp-items="Model.DataList"></select>
+                <label asp-for="Form" class="control-label"></label>
+                <select asp-for="Form" asp-items="Model.FormList"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
