--- a/Laba2/ASP_UI/Views/MedicalBills/Edit.cshtml
+++ b/Laba2/ASP_UI/Views/MedicalBills/Edit.cshtml
@@ -12,20 +12,21 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">x
+            <div class="form-group">
+                x
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" value="@ViewBag.Bill.Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" asp-items="Model.DataList"></select>
+                <select asp-for="Type" asp-items="Model.TypeList"></select>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" value="@ViewBag.Bill.Quantity"  class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
+                <label asp-for="Form" class="control-label"></label>
+                <select asp-for="Form" asp-items="Model.FormList"></select>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
