--- a/Laba2/ASP_UI/Views/MedicalBills/List.cshtml
+++ b/Laba2/ASP_UI/Views/MedicalBills/List.cshtml
@@ -27,10 +27,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@
+                Название
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MedicalBillsType.Type)
+                @*@Html.DisplayNameFor(model => model.MedicalBillsType.Type)*@
+                Тип препарата
+            </th>
+            <th>
+                @*@Html.DisplayNameFor(model => model.Form.FormName)*@
+                Форма препарата
             </th>
         </tr>
     </thead>
@@ -44,9 +50,12 @@
                 @Html.DisplayFor(modelItem => item.MedicalBillsType.Type)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Form.FormName)
+            </td>
+            <td>
                 @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
                 <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
                 <a asp-action="Edit" class="btn btn-success" asp-route-id="@item.Id">Edit</a>
             </td>
