--- a/Laba2/ASP_UI/Views/StoreHouse/Create.cshtml
+++ b/Laba2/ASP_UI/Views/StoreHouse/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BLL.DTOs.StoreHouseDTO
+﻿@model ASP_UI.Models.ViewModels.StoreHouseViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <select asp-for="Name" asp-items="Model.MedicalBills"></select>
+                <span asp-validation-for="DateOfManufacture" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateOfManufacture" class="control-label"></label>
@@ -35,6 +35,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="List">Back to List</a>
 </div>
 
