--- a/Laba2/ASP_UI/Views/StoreHouse/List.cshtml
+++ b/Laba2/ASP_UI/Views/StoreHouse/List.cshtml
@@ -46,8 +46,7 @@
                 @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
-                <a asp-action="Edit" class="btn btn-success" asp-route-id="@item.Id">Edit</a>
+                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Списать</a>
             </td>
         </tr>
 }
