feat: add waitablelist crud and writeoflist crud

--- a/Laba2/ASP_UI/Views/Shared/_Layout.cshtml
+++ b/Laba2/ASP_UI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MedicalBills" asp-action="List">Препараты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StoreHouse" asp-action="List">Склад</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="WriteOfList" asp-action="List">Списанные препараты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="WaitableList" asp-action="List">Список поступивших препаратов</a>
+                        </li>
                     </ul>
                 </div>
             </div>
