--- a/Laba2/ASP_UI/Views/StoreHouse/Delete.cshtml
+++ b/Laba2/ASP_UI/Views/StoreHouse/Delete.cshtml
@@ -22,12 +22,12 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Delete" class="btn btn-danger" />
+                <input type="submit" value="Списать" class="btn btn-danger" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="List">Back to List</a>
+    <a asp-action="List">Вернуться к списку</a>
 </div>
