--- a/Laba2/ASP_UI/Views/WriteOfList/List.cshtml
+++ b/Laba2/ASP_UI/Views/WriteOfList/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ASP_UI.Models.ViewModels.StoreHouseViewModel>
+﻿@model IEnumerable<ASP_UI.Models.ViewModels.WriteOfListViewModel>
 
 @{
     ViewData["Title"] = "List";
@@ -7,7 +7,7 @@
 <h1>List</h1>
 
 <p>
-    <a asp-action="Create">Добавить</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -28,7 +28,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -49,6 +50,6 @@
                 <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Списать</a>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
