fix: change roles crud

--- a/Laba2/ASP_UI/Views/Roles/List.cshtml
+++ b/Laba2/ASP_UI/Views/Roles/List.cshtml
@@ -17,4 +17,4 @@
     }
 </table>
 <a asp-action="Create">Добавить роль</a>
-<a asp-controller="Users" asp-action="List">Список пользователей</a>
+<a asp-action="UserList">Список пользователей</a>
