--- a/Laba2/ASP_UI/Views/Account/Register.cshtml
+++ b/Laba2/ASP_UI/Views/Account/Register.cshtml
@@ -1,23 +1,23 @@
 ﻿@model ASP_UI.Models.Identiy.ViewModel.RegisterViewModel;
-<h2>Регистрация нового пользователя</h2>
-<form method="post" asp-controller="Account" asp-action="Register">
+<form method="post" class="form-signin m-auto mt-auto mb-auto" style="width:300px" asp-controller="Account" asp-action="Register">
+    <h2>Регистрация</h2>
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Email"></label><br />
-        <input asp-for="Email" />
+        <input class="form-control" asp-for="Email" />
         <span asp-validation-for="Email"></span>
     </div>
     <div>
         <label asp-for="Password"></label><br />
-        <input asp-for="Password" />
+        <input class="form-control" asp-for="Password" />
         <span asp-validation-for="Password"></span>
     </div>
     <div>
         <label asp-for="PasswordConfirm"></label><br />
-        <input asp-for="PasswordConfirm" />
+        <input class="form-control" asp-for="PasswordConfirm" />
         <span asp-validation-for="PasswordConfirm"></span>
     </div>
     <div>
-        <input type="submit" value="Регистрация" />
+        <input class="btn btn-lg btn-success btn-block mt-2" type="submit" value="Регистрация" />
     </div>
 </form>
