--- a/Laba2/ASP_UI/Views/StoreHouse/List.cshtml
+++ b/Laba2/ASP_UI/Views/StoreHouse/List.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "List";
 }
 
-<h1>List</h1>
-
+<h1>Склад</h1>
+@if (User.IsInRole("admin") || User.IsInRole("storekeeper"))
+{
 <p>
     <a asp-action="Create">Добавить</a>
 </p>
+}
 <table class="table">
     <thead>
         <tr>
@@ -43,10 +45,10 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Списать</a>
+                @if (User.IsInRole("admin") || User.IsInRole("storekeeper"))
+                {
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Списать</a>
+                }
             </td>
         </tr>
 }
